Wed Jun 26 01:17:29 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigsub_int): Fix a buffer over read.

Tue Jun 25 22:45:43 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_absint_singlebit_p): Use POW2_P.
	  (bary_pack): Ditto.
	  (rb_big2str0): Ditto.
	  (POW2_P): Moved to top.

Tue Jun 25 22:28:07 2013  Akinori MUSHA  <knu@iDaemons.org>

	* lib/rubygems/ext/builder.rb (Gem::Ext::Builder.make): Pass
	  DESTDIR via command line to override what's in MAKEFLAGS.  This
	  fixes an installation problem under a package building
	  environment where DESTDIR is specified in the (parent) command
	  line. [Fixes GH-327]

Tue Jun 25 21:43:13 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2dbl): Use (BDIGIT)1 instead of 1UL.
	  (bary_mul_normal): Remove a useless cast.

Tue Jun 25 21:26:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigMath_s_exp): Fix for the cases when
	  the argument x is not a BigDecimal.
	  This change is based on the patch made by Garth Snyder.
	  [Fix GH-332] https://github.com/ruby/ruby/pull/332

Tue Jun 25 20:36:31 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2ulong): "check" argument removed.
	  (rb_big2ulong): Follow above change.
	  (rb_big2long): Ditto.
	  (rb_big_rshift): Ditto.
	  (rb_big_aref): Ditto.

Tue Jun 25 20:08:29 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big2ulong_pack): Use rb_integer_pack.
	  (rb_big_aref): Call big2ulong with TRUE for "check" argument.
	  It should be non-effective.

Tue Jun 25 19:07:33 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (LSHIFTX): Revert r41611.
	  The redundant expression suppresses a warning, C4293, by Visual
	  Studio.
	  http://ruby-mswin.cloudapp.net/vc10-x64/ruby-trunk/log/20130625T072854Z.log.html.gz#miniruby

Tue Jun 25 19:03:00 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2ulong): Add a cast.
	  (big2ull): Add a specialized code for SIZEOF_LONG_LONG <=
	  SIZEOF_BDIGITS.

Tue Jun 25 12:42:57 2013  Tanaka Akira  <akr@fsij.org>
